update working experience

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
       </thead>
       <tbody>
         <tr>
+          <td>09.2020 – Present</td>
+          <td>Senior Software Engineer at <Strong><a href="https://www.advantech.com/">Advantech Co., Ltd.</a></Strong>, California
+          </td>
+        </tr>
+        <tr>
           <td>02.2020 – Present</td>
-          <td>Senior Software Engineer at <Strong><a href="https://www.cognitiveleap.com">Cognitive Leap Solutions Inc.</a></Strong>, California
+          <td>Senior Software Consultant at <Strong><a href="https://www.cognitiveleap.com">Cognitive Leap Solutions Inc.</a></Strong>, California
           </td>
         </tr>
         <tr>
