--- a/index.html
+++ b/index.html
@@ -105,5 +105,6 @@
     <hr>
     <a href="contact-me.html">Contact Me</a>
     <a href="publications.html">Publications</a>
+    <a href="https://kevin-virtual-world.herokuapp.com">Kevin Virtual World</a>
   </body>
 </html>
